# matrix-core

./: .gitignore  Cargo.toml  add_numbering.py  add_toc.py  add_toc2.py  dump_form.py  finish_ui.py  fix_ctx_head.py  fix_ctx_head2.py  fix_decl.py  fix_decl2.py  fix_defaults.py  fix_endpoint_form.py  fix_final.py  fix_form_wrapper.py  fix_grid_card.py  fix_llm.py  fix_menus.py  fix_openadd.py  fix_pages.py  fix_profiles.py  fix_profiles_lists.py  fix_profiles_v2.py  fix_save.py  fix_settings.py  fix_settings_form.py  fix_settings_state.py  fix_tags.py  fix_topk.py  fix_topk_chat.py  fix_topk_final.py  fix_ui_bugs.py  fix_unused.py  inject_settings.py  move_topk.py  patch_contexts.py  patch_ipc.py  patch_mod.py  patch_models.py  patch_pages.py  (+6 more)
.github/workflows/: ci.yml
examples/: onnx_smoke.rs  rerank_smoke.rs
src/: lib.rs
src/chunking/: CLAUDE.md  mod.rs  segments.rs  sentences.rs  signatures.rs  structural.rs  structural.rs.rej  tests.rs  window.rs
src/db/: CLAUDE.md  chat_sessions.rs  chat_sessions_tests.rs  chunk_refs.rs  chunk_refs_tests.rs  chunks.rs  chunks_tests.rs  contexts.rs  embedding_kind_tests.rs  embeddings.rs  eval.rs  fts.rs  fts_tests.rs  grid.rs  grid_profiles.rs  mod.rs  models.rs  ontology.rs  pools.rs  profiles.rs  reasoning_lists.rs  ref_abbreviations.rs  ref_abbreviations_tests.rs  registries.rs  reranker_tests.rs  schema_v1.sql  schema_v10.sql  schema_v11.sql  schema_v12.sql  schema_v13.sql  schema_v14.sql  schema_v15.sql  schema_v16.sql  schema_v17.sql  schema_v18.sql  schema_v19.sql  schema_v2.sql  schema_v20.sql  schema_v21.sql  schema_v22.sql  (+46 more)
src/db/ontology/: communities.rs  dedup_cache.rs  edge_reviews.rs  edges.rs  lenses.rs  lifecycle.rs  metrics.rs  mod.rs  nodes.rs  profiles.rs  quarantine.rs  retrieval.rs  run_log.rs  schema_suggestions.rs  tests.rs  type_vector_cache.rs
src/db/ontology/tests/: communities.rs  fixtures.rs  lenses_reviews.rs  misc_state.rs  nodes_edges.rs  retrieval.rs  type_vector_cache.rs
src/embedding/: CLAUDE.md  gguf_embed.rs  gguf_rerank.rs  mod.rs  onnx.rs  rerank.rs  retrieval.rs  tests.rs
src/inference/: gguf.rs  mod.rs
src/refs/: CLAUDE.md  law_abbrevs.rs  mod.rs  tests.rs
